tests/examples/good/garbage_collector/good310.lat
int main() {
    A a = new A;
    a.a++;
    printInt(a.a);
    return 0;
}

class A {
    int a;
}