tests/examples/bad/class_member_method_var_redeclaration.lat
int main() {
    return 1;
}
 
class A {
    int a;
    int f(int a) {int a; return 1;}
}

